@@ -148,7 +148,7 @@ void InspectorFrontendClientLocal::restoreAttachedWindowHeight()
     String attachedHeight = m_inspectorController->setting(inspectorAttachedHeightName);
     bool success = true;
     int height = attachedHeight.toInt(&success);
-    unsigned preferredHeight = success ? height : defaultAttachedHeight;
+    unsigned preferredHeight = success ? static_cast<unsigned>(height) : defaultAttachedHeight;
     
     // This call might not go through (if the window starts out detached), but if the window is initially created attached,
     // InspectorController::attachWindow is never called, so we need to make sure to set the attachedWindowHeight.
